tools/lsp/squirrel/grammar/pascaligo/test/corpus/expr.txt
=========
paren
=========

const x = (foo (42))

---

(source_file
  (const_decl
    (var_pattern (NameDecl))
    (paren_expr (apply (Name) (Int)))))

=========
tuple
=========

const x = (1, "foo", 3)

---

(source_file
  (const_decl
    (var_pattern (NameDecl))
    (tuple_expr (Int) (String) (Int))))

=========
single paren
=========

const x = (1)

---

(source_file
  (const_decl
    (var_pattern (NameDecl))
    (paren_expr (Int))))

=========
tuples and parens
=========

const x = ((1, "foo", 3))
const y = ((1), ("foo"), 3)

---

(source_file
  (const_decl
    (var_pattern (NameDecl))
    (paren_expr
      (tuple_expr (Int) (String) (Int))))
  (const_decl
    (var_pattern (NameDecl))
    (tuple_expr (paren_expr (Int)) (paren_expr (String)) (Int))))
