tools/lsp/squirrel/grammar/pascaligo/test/corpus/type_expr.txt
=========
Sum
=========

type test is
  | Add of int
  | Sub of int

---

(source_file
  (type_decl
    (TypeName)
    (sum_type
      (variant (NameConstr) (TypeName))
      (variant (NameConstr) (TypeName))
    )
  )
)


=========
Nested sum
=========

type test is
  | Cond of (True | False)
  | Sub of int

---

(source_file
  (type_decl
    (TypeName)
    (sum_type
      (variant (NameConstr)
        (sum_type
          (variant (NameConstr))
          (variant (NameConstr))
        )
      )
      (variant (NameConstr)
        (TypeName)
      )
    )
  )
)


=========
Product
=========

type test is int * bool

---

(source_file
  (type_decl
    (TypeName)
    (prod_type (TypeName) (TypeName))
  )
)


=========
Nested product
=========

type test is (((int * (bool * nat))))

---

(source_file
  (type_decl
    (TypeName)
    (prod_type (TypeName) (prod_type (TypeName) (TypeName)))
  )
)


=========
Function of products
=========

type test is a * b -> c * d -> e * f

---

(source_file
  (type_decl
    (TypeName)
    (fun_type
      (prod_type (TypeName) (TypeName))
      (fun_type
        (prod_type (TypeName) (TypeName))
        (prod_type (TypeName) (TypeName))
      )
    )
  )
)
